cilium-networkpolicies/netdata-networkpolicies/netpol-netdata-child.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-netdata-child
  namespace: netdata
spec:
  endpointSelector:
    matchLabels:
      app: netdata
      role: child
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
        - ports:
            - port: "9963"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "9100"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "9153"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-netdata-ingressable-dns
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: kube-system
      k8s-app: kube-dns
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: netdata
            app: netdata
      toPorts:
        - ports:
            - port: "9153"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-netdata-ingressable-traefik
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: traefik
      app.kubernetes.io/name: traefik
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: netdata
            app: netdata
      toPorts:
        - ports:
            - port: "9100"
              protocol: TCP
