cilium-networkpolicies/netdata-networkpolicies/netpol-netdata-common.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-netdata-common
  namespace: netdata
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
    - fromEndpoints:
        - {}
  egress:
    - toEndpoints:
        - {}
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
        - ports:
            - port: "443"
              protocol: TCP
