cilium-networkpolicies/netdata-networkpolicies/netpol-netdata-k8sstate.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-netdata-k8sstate
  namespace: netdata
spec:
  endpointSelector:
    matchLabels: 
      app: netdata
      role: k8sState
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
