cilium-networkpolicies/netdata-networkpolicies/netpol-netdata-parent.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-netdata-parent
  namespace: netdata
spec:
  endpointSelector:
    matchLabels: 
      app: netdata
      role: parent
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
