cilium-networkpolicies/netdata-networkpolicies/netpol-netdata-to-host.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-netdata-to-host
  namespace: netdata
spec:
  endpointSelector:
    matchLabels: 
      app: netdata
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
