cilium-networkpolicies/netdata-networkpolicies/netpol-netdata-traefik-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-netdata-traefik-ingress
  namespace: netdata
spec:
  endpointSelector:
    matchLabels:
      app: netdata
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "19999"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netpol-netdata-traefik-egress
  namespace: traefik
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: traefik
      app.kubernetes.io/name: traefik
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: netdata
            app: netdata
      toPorts:
        - ports:
            - port: "19999"
              protocol: TCP
